--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   dio: ^5.7.0
+  firebase_core: ^3.10.0
+  firebase_auth: ^5.4.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
