--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.0
   google_sign_in: ^6.2.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
