--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,11 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.0
   google_sign_in: ^6.2.2
-  intl: ^0.20.2
+  flutter_localization: ^0.3.1
+  intl: ^0.19.0
+  flutter_localizations:
+    sdk: flutter
+  persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
   flutter_test:
