--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,3 +46,7 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+   implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+}
