--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   persistent_bottom_nav_bar: ^6.2.1
+  flutter_facebook_auth: ^7.1.1
 
 dev_dependencies:
   flutter_test:
